# AI_solo_coder_task_A_120

backend/: CMakeLists.txt  config.json
backend/include/: clickhouse_storage.h  common.h  config_manager.h  dynamics_model.h  http_server.h  udp_receiver.h
backend/src/: accuracy_analyzer_service.cpp  alarm_mqtt_service.cpp  ballistic_simulator.cpp  clickhouse_storage.cpp  dynamics_model.cpp  http_server.cpp  main.cpp  mqtt_alert_manager.cpp  udp_receiver.cpp
clickhouse/: init.sql
frontend/: index.html
frontend/js/: app.js  config.js  crossbow3d.js  crossbow_3d.js
simulator/: crossbow_simulator.py
